--- a/cannibal.CSharp.csproj
+++ b/cannibal.CSharp.csproj
@@ -51,20 +51,11 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
@@ -87,10 +78,10 @@
     <Compile Include="Assets\Font\BitmapFontScaling.cs" />
     <Compile Include="Assets\Script\CSVDataReader.cs" />
     <Compile Include="Assets\Script\ContrallerStat.cs" />
-    <Compile Include="Assets\Script\CustomerContraller.cs" />
+    <Compile Include="Assets\Script\CustomerController.cs" />
     <Compile Include="Assets\Script\CustomerStat.cs" />
-    <Compile Include="Assets\Script\GameContraller.cs" />
-    <Compile Include="Assets\Script\PlayerContraller.cs" />
+    <Compile Include="Assets\Script\GameController.cs" />
+    <Compile Include="Assets\Script\PlayerController.cs" />
     <Compile Include="Assets\Script\PlayerPrefsX.cs" />
     <Compile Include="Assets\Script\PlayerStat.cs" />
   </ItemGroup>
