--- a/cannibal.CSharp.csproj
+++ b/cannibal.CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Script\ContrallerStat.cs" />
     <Compile Include="Assets\Script\CustomerController.cs" />
     <Compile Include="Assets\Script\CustomerStat.cs" />
+    <Compile Include="Assets\Script\DebugController.cs" />
     <Compile Include="Assets\Script\GameController.cs" />
     <Compile Include="Assets\Script\PlayerController.cs" />
     <Compile Include="Assets\Script\PlayerPrefsX.cs" />
