--- a/CannibalBurgerSimple.csproj
+++ b/CannibalBurgerSimple.csproj
@@ -98,10 +98,14 @@
     <Compile Include="Assets\Script\CustomerController.cs" />
     <Compile Include="Assets\Script\DebugController.cs" />
     <Compile Include="Assets\Script\GameController.cs" />
+    <Compile Include="Assets\Script\ItemController.cs" />
     <Compile Include="Assets\Script\PlayerPrefsX.cs" />
+    <Compile Include="Assets\Script\SelectButton.cs" />
+    <Compile Include="Assets\Script\Sorter.cs" />
     <Compile Include="Assets\Script\StatCustomer.cs" />
     <Compile Include="Assets\Script\StatGame.cs" />
     <Compile Include="Assets\Script\StatGameController.cs" />
+    <Compile Include="Assets\Script\StatItem.cs" />
     <Compile Include="Assets\Script\StatPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
