--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Resources\Script\GameController.cs" />
     <Compile Include="Assets\Resources\Script\Glower.cs" />
     <Compile Include="Assets\Resources\Script\GlowImage.cs" />
+    <Compile Include="Assets\Resources\Script\Infomation.cs" />
     <Compile Include="Assets\Resources\Script\ItemController.cs" />
     <Compile Include="Assets\Resources\Script\LetterSpacing.cs" />
     <Compile Include="Assets\Resources\Script\LvDesignController.cs" />
